--- a/less/blocks/_card.less
+++ b/less/blocks/_card.less
@@ -1,36 +1,40 @@
 .card {
     display: flex;
     flex-direction: column;
-    
     box-sizing: border-box;
-    border: solid 1px var(--black);
+    flex: 1 1 auto;
     width: 255px;
+    border: solid 1px var(--black);
 }
 
 .card__photo {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    padding: 5px;
+    flex-shrink: 0;
     height: 180px;
+    padding: 5px;
 
     background-color: var(--black);
 }
 .card__img {
     width: 100%;
     height: 100%;
+
     object-fit: contain;
 }
 
 .card__desc {
     display: flex;
 	flex-direction: column;
-	gap: 8px;
-
+    flex: 1 1 auto;
+    position: relative; 
+    height: 100%;
+	
+    gap: 8px;
+    
     padding: 16px;
-    padding-bottom: 24px;
-    height: 313px;   
+    padding-bottom: 24px; 
 }
 .card__title {
     font-family: var(--font-title);
@@ -39,6 +43,7 @@
 }
 .card__text {
     color: var(--text-muted);
+
     margin-bottom: 8px;
 }
 .card__btn {
@@ -47,6 +52,7 @@
 
     color: var(--accent);
     padding: 10px 28px;
+    
     border: solid 1px var(--accent);
 
     &:hover {
@@ -66,6 +72,3 @@
         background: none;
     }
 }
-
-
-  
