--- a/less/base/_base.less
+++ b/less/base/_base.less
@@ -54,7 +54,7 @@ input:focus:not(:focus-visible) {
 }
 @media (max-width: 1000px) {
     html, body {
-        font-size: 14px;
+        //font-size: 14px;
     }
 }
 /*
