--- a/less/blocks/_form.less
+++ b/less/blocks/_form.less
@@ -38,7 +38,7 @@
     align-self: start;
     padding: 11.5px 26px;
     background-color: var(--accent);
-    font-weight: bold;
+    //font-weight: bold;
     color: var(--black);
     transition: background-color 0.3s ease;
 
