--- a/less/blocks/_help-us.less
+++ b/less/blocks/_help-us.less
@@ -1,6 +1,7 @@
 .help-us {
     width: 100%;
     min-height: 50vh;
+    padding: 60px 0;
 
     display: flex;
     align-items: center;
@@ -14,7 +15,6 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    display: none;
 
     .retina-bg('./../../img/bg/help-bg@3x.jpg');
 }
@@ -33,4 +33,11 @@
     font-weight: 400;
     
     margin-bottom: 24px;
+}
+
+
+@media (max-width: 768px) {
+    .help-us__text {
+        display: none;
+    }
 }
