--- a/less/blocks/_social-list.less
+++ b/less/blocks/_social-list.less
@@ -3,8 +3,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: 20px;
-    padding: 13px 0;
+    column-gap: 30px;
+    padding: 18px 0;
 }
 
 .social-list__link {
@@ -30,4 +30,11 @@
     font-size: 12px;
     color: var(--text-muted);
     padding: 3px 0;
+}
+
+@media (max-width: 270px) {
+    .social-list {
+        column-gap: 10px;
+
+}
 }
