--- a/css/main.css
+++ b/css/main.css
@@ -1007,3 +1007,8 @@ input:focus:not(:focus-visible) {
     flex: 0 0 auto;
   }
 }
+@media (max-width: 335px) {
+  .swiper-pagination {
+    bottom: -50px !important;
+  }
+}
