--- a/less/blocks/_swiper.less
+++ b/less/blocks/_swiper.less
@@ -20,7 +20,7 @@
         left: 50% !important;
         transform: translateX(-50%) !important;
         width: auto !important;
-        
+
         gap: 20px;
     }
 
@@ -38,18 +38,26 @@
         background-color: var(--accent) !important;
     }
 }
+
 @media (max-width: 500px) {
     .swiper-pagination {
-        flex-wrap: wrap;  
+        flex-wrap: wrap;
         justify-content: center;
         bottom: -40px !important;
-      }
-  
-      .swiper-pagination-bullets {
+    }
+
+    .swiper-pagination-bullets {
         display: flex;
         gap: 8px;
-      }
-      .swiper-pagination-bullet {
-        flex: 0 0 auto; 
-      }
-  }
+    }
+
+    .swiper-pagination-bullet {
+        flex: 0 0 auto;
+    }
+}
+
+@media (max-width: 335px) {
+    .swiper-pagination {
+        bottom: -50px !important;
+    }
+}
