--- a/less/blocks/_nav.less
+++ b/less/blocks/_nav.less
@@ -134,12 +134,12 @@
     }
 
     .nav__logo-img {
-        width: 45px;
-        height: auto;
+        //width: 45px;
+        //height: auto;
     }
 
     .nav__buttons svg {
-        width: 15px;
+        //width: 15px;
     }
 }
 
