--- a/less/blocks/_about.less
+++ b/less/blocks/_about.less
@@ -17,6 +17,12 @@
     column-gap: 30px;
     
     align-items: stretch;
+
+    .media-tabled ({
+        grid-template-columns: 1fr;
+        column-gap: 0;
+        row-gap: 30px;
+    })
 }
 
 
@@ -32,25 +38,16 @@
     &:active {
         color: var(--black);
     }
+
+    .media-tabled ({
+        margin-top: 76px;
+    })
 }
 
 @media (max-width: 1090px) {
     .about .learn-more-link {
         position: static;
         margin-top: 25px;
-    }
-
-}
-
-@media (max-width: 768px) {
-    .about-row {
-        grid-template-columns: 1fr;
-        column-gap: 0;
-        row-gap: 30px;
-    }
-
-    .about .learn-more-link {
-        margin-top: 76px;
     }
 
 }
