--- a/less/blocks/_help-us.less
+++ b/less/blocks/_help-us.less
@@ -33,11 +33,8 @@
     font-weight: 400;
     
     margin-bottom: 24px;
-}
 
-
-@media (max-width: 768px) {
-    .help-us__text {
+    .media-tabled ({
         display: none;
-    }
+    })
 }
