--- a/less/blocks/_social-list.less
+++ b/less/blocks/_social-list.less
@@ -5,6 +5,10 @@
     align-items: center;
     column-gap: 30px;
     padding: 18px 0;
+
+    .media-mobile ({
+        column-gap: 10px;
+    });
 }
 
 .social-list__link {
@@ -30,11 +34,4 @@
     font-size: 12px;
     color: var(--text-muted);
     padding: 3px 0;
-}
-
-@media (max-width: 270px) {
-    .social-list {
-        column-gap: 10px;
-
-}
 }
