--- a/less/blocks/_img-number.less
+++ b/less/blocks/_img-number.less
@@ -20,7 +20,6 @@
     }
 }
 
-// смещение картинки
 .number-polypody {
     position: relative;
     //left: -37px;
@@ -35,6 +34,10 @@
     top: 0;
     //right: -13px;
     right: -8%;
+
+    .media-tabled ({
+        right: -15%;
+    })
 }
 
 .number-stick::after {
@@ -42,6 +45,11 @@
     //left: 130px;
     top: 23%;
     left: 31%;
+
+    .media-tabled ({
+        top: 15%;
+        left: 20%;
+    })
 }
 
 .number-flower::after {
@@ -54,6 +62,9 @@
     bottom: 0;
     //right: 20px;
     right: 13%;
+    .media-tabled ({
+        right: 0;
+    })
 }
 
 .number-bark::after {
@@ -72,19 +83,4 @@
 .number-plant::after {
     top: -14px;
     left: 0;
-}
-
-@media (max-width: 780px) {
-    .number-moss::after {
-        right: -15%;
-    }
-
-    .number-stick::after {
-        top: 15%;
-        left: 20%;
-    }
-
-    .number-polypody::after {
-        right: 0;
-    }
 }
