--- a/less/blocks/_nav.less
+++ b/less/blocks/_nav.less
@@ -5,11 +5,15 @@
     justify-content: space-between;
     align-items: center;
     min-height: 60px;
+
+    .media-tabled ({
+        position: relative;
+    })
 }
 
 .nav-row {
     display: flex;
-    column-gap: 125px;
+    column-gap: clamp(30px, calc(-4.911rem + 14.14vw), 125px);
 }
 
 .nav__logo-link {
@@ -27,8 +31,32 @@
 
 .nav-menu {
     display: flex;
-    column-gap: 64px;
+    column-gap: clamp(10px, calc(-3.232rem + 8.04vw), 64px);
     align-items: center;
+
+    .media-tabled ({
+        position: absolute;
+        
+        bottom: -40px;
+        left: 50%;
+        transform: translateX(-50%);
+
+        max-width: 100%;
+        z-index: 5;
+
+        
+        -ms-overflow-style: none;
+        overflow-x: auto;
+        white-space: nowrap;
+        scrollbar-width: none;
+        overflow-y: hidden;
+    })
+}
+
+.nav-menu::-webkit-scrollbar {
+    .media-tabled ({
+        display: none;
+    })      
 }
 
 .nav-menu__link {
@@ -46,7 +74,7 @@
 
 .nav__buttons {
     display: flex;
-    column-gap: 64px;
+    column-gap: clamp(15px, calc(-3.737rem + 8.6vw), 64px);
     align-items: center;
 }
 
@@ -64,82 +92,9 @@
     }
 }
 
-
-@media (max-width: 1100px) {
-    .nav-row {
-        column-gap: 100px;
-    }
-
-    .nav__buttons {
-        column-gap: 30px;
-    }
-}
-
 @media (max-width: 1000px) {
-    .nav-menu {
-        column-gap: 30px;
-    }
-
     .nav__buttons svg {
         width: 20px;
         height: auto;
     }
 }
-
-@media (max-width: 870px) {
-    .nav-row {
-        column-gap: 50px;
-    }
-
-    .nav-menu {
-        column-gap: 20px;
-    }
-
-    .nav__buttons {
-        column-gap: 15px;
-    }
-}
-
-@media (max-width: 768px) {
-    .nav {
-        position: relative;
-    }
-
-    .nav-row {
-        column-gap: 30px;
-    }
-
-    .nav-menu {
-        column-gap: 10px;
-        position: absolute;
-        
-        bottom: -40px;
-        left: 50%;
-        transform: translateX(-50%);
-
-        max-width: 100%;
-        z-index: 5;
-
-        
-        -ms-overflow-style: none;
-        overflow-x: auto;
-        white-space: nowrap;
-        scrollbar-width: none;
-        overflow-y: hidden;
-    }
-
-    
-    .nav-menu::-webkit-scrollbar {
-        display: none; 
-    }
-
-    .nav__logo-img {
-        //width: 45px;
-        //height: auto;
-    }
-
-    .nav__buttons svg {
-        //width: 15px;
-    }
-}
-
