--- a/less/blocks/_samples.less
+++ b/less/blocks/_samples.less
@@ -1,7 +1,7 @@
 .samples {
     display: flex;
     flex-wrap: wrap;
-    row-gap: 18px;
+    row-gap: clamp(0px, calc(-2.181rem + 3.67vw), 18px);
     padding: 16px;
     justify-content: space-between;
     background-color: var(--black);
@@ -9,11 +9,9 @@
 }
 
 .samples-wrapper {
-     align-self: stretch;
-  /* 2) превращаем wrapper в флекс-контейнер */
-  display: flex;
-  /* 3) центрируем содержимое (ваш .samples) по вертикали */
-  align-items: center;
+    align-self: stretch;
+    display: flex;
+    align-items: center;
 }
 
 .size(@width, @height) {
@@ -50,10 +48,6 @@
 }
 
 @media (max-width: 1110px) {
-    .samples {
-        row-gap: 12px;
-    }
-
     .samples img {
         display: block;
         width: 100%;
@@ -96,7 +90,6 @@
 
 @media (max-width: 890px) {
     .samples {
-        row-gap: 0;
         align-content: center;
     }
 }
@@ -122,7 +115,7 @@
             background-repeat: no-repeat;
             background-position: right center;
             background-size: 30px 10px;
-            
+
             font-size: 16px;
             color: var(--text-muted);
         }
