--- a/less/blocks/_slider.less
+++ b/less/blocks/_slider.less
@@ -9,6 +9,10 @@
     margin-top: 26px;
 
     gap: 30px;
+
+    .media-tabled ({
+        display: none;
+    })
 }
 
 .slider__btn {
@@ -38,11 +42,4 @@
 .slider__count {
     font-family: var(--font-title);
     font-size: 24px;
-}
-
-
-@media (max-width: 768px) {
-    .slider__arrows {
-        display: none;
-    }
 }
