--- a/less/blocks/_help-us.less
+++ b/less/blocks/_help-us.less
@@ -16,7 +16,8 @@
     background-repeat: no-repeat;
 
 
-    .retina-bg('./../../img/bg/help-bg@3x.jpg');
+    //.retina-bg('./../../img/bg/help-bg@3x.jpg');
+    .retina-bg("./../img/bg/help-bg.jpg");
 }
 .help-us__title {
     font-family: var(--font-title);
