--- a/less/blocks/_hero.less
+++ b/less/blocks/_hero.less
@@ -16,8 +16,9 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    .retina-bg('./../../img/bg/hero-bg@3x.jpg');
+    //.retina-bg('./../../img/bg/hero-bg@3x.jpg');
 
+    .retina-bg("./../img/bg/hero-bg.jpg");
     .media-tabled ({
         min-height: 30vh;
     });
