--- a/less/blocks/_help-us.less
+++ b/less/blocks/_help-us.less
@@ -10,14 +10,14 @@
 
     background-image: 
         linear-gradient(rgba(29, 47, 48, 0.7), rgba(29, 47, 48, 0.7)),
-        url("./../../img/bg/help-bg.jpg");
+        url("./../img/bg/help-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
 
     //.retina-bg('./../../img/bg/help-bg@3x.jpg');
-    .retina-bg("./../img/bg/help-bg.jpg");
+    .retina-bg("./../img/bg/help-bg@3x.jpg");
 }
 .help-us__title {
     font-family: var(--font-title);
