--- a/less/blocks/_hero.less
+++ b/less/blocks/_hero.less
@@ -11,14 +11,14 @@
 
     background-image: 
         linear-gradient(rgba(29, 47, 48, 0.7), rgba(29, 47, 48, 0.7)),
-        url("./../../img/bg/hero-bg.jpg");
+        url("./../img/bg/hero-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
     //.retina-bg('./../../img/bg/hero-bg@3x.jpg');
 
-    .retina-bg("./../img/bg/hero-bg.jpg");
+    .retina-bg("./../img/bg/hero-bg@3x.jpg");
     .media-tabled ({
         min-height: 30vh;
     });
@@ -31,14 +31,6 @@
     max-width: 688px;
     
     margin-bottom: 16px;
-
-    .media-tabled ({
-        //font-size: 48px;
-    });
-
-    .media-mobile ({
-        //font-size: 30px;
-    });
 }
 .hero__text {
     max-width: 635px;
